fixed overflow issue for secondary nav

--- a/public/kanbas/Courses/Grades/index.css
+++ b/public/kanbas/Courses/Grades/index.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   flex-grow: 1;
   flex-shrink: 1;
-  overflow-x: auto;
+  /*overflow-x: hidden;*/
   /*margin-bottom: 50px;*/
 }
 
