--- a/public/styles.css
+++ b/public/styles.css
@@ -118,8 +118,6 @@ i#external-link-icon {
   display: flex;
   flex-direction: row;
   width: 100%;
-  overflow-x: auto;
-  overflow-y: hidden;
 }
 
 /* ***********************header bar styling end************************** */
@@ -238,5 +236,9 @@ ul.breadcrumbs .list-group-item a:hover {
 @media only screen and (max-width:767px) {
     .main-content-wrapper {
         margin-left: 0px;
+    }
+
+    .below-header-content {
+      overflow-x: auto;
     }
 }
